--- a/app.yaml
+++ b/app.yaml
@@ -1,19 +1,13 @@
-application: curious-scarab-295
-version: 12
-api_version: 1
-runtime: python27
-threadsafe: True
+runtime: python37
 
 handlers:
+- url: /.well-known/acme-challenge
+  static_dir: letsencrypt
 - url: /styles
   static_dir: styles
 - url: /js
   static_dir: js
 - url: /img
   static_dir: images
-- url: /test/.*
-  script: test.application
-- url: /store_user.php
-  script: wine_metric.application
 - url: /.*
-  script: main_site.app
+  script: auto
